# photometric

./: CMakeLists.txt  gen_icon.cpp  gen_icon.h  input.txt  main.cpp
GCv2p3/: CMakeLists.txt  GCoptimization.cpp  graph.h
Reconstruction/: main.m
