CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)
PROJECT("photometric")

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR})
FIND_PACKAGE(Eigen3 REQUIRED)
INCLUDE_DIRECTORIES(EIGEN3_INCLUDE_DIR)

ADD_SUBDIRECTORY("GCv2p3")
FIND_PACKAGE(OpenCV REQUIRED)
SET(CORELIBS ${OpenCV_LIBS} graphCutCore)

ADD_EXECUTABLE(photometric main.cpp gen_icon.h gen_icon.cpp)
TARGET_LINK_LIBRARIES(photometric ${CORELIBS})
